syntax = "proto3";
package com.inlineio.schemas;

message FieldSchema {
  // the case-sensitive field name
  string name = 1;

  // unique field-id. `name` and `id`
  // have 1:1 mappings.
  int32 id = 2;

  FieldType fieldType = 3;
}

enum FieldType {
  // usually signifies producer is ahead
  // on the symbol list
  UNKNOWN = 0;

  INT32 = 1;
  INT64 = 2;
  FLOAT32 = 3;
  FLOAT64 = 4;
  STRING = 5;
  BYTES = 6;
}

message IKVStoreConfig {
  // Map key uniquely defines a config key
  // Config keys are unique across all typed maps
  map<string, string> stringConfigs = 1;
  map<string, int64> numericConfigs = 2;
  map<string, bytes> bytesConfigs = 3;
}

message AccountCredentials {
  string accountId = 1;
  string accountPasskey = 2;
}