syntax = "proto3";

option java_package = "com.inlineio.schemas";

package ikvschemas;

import "common.proto";

service InlineKVWriteService {
  rpc getUserStoreConfig(GetUserStoreConfigRequest) returns (GetUserStoreConfigResponse) {}
}

message GetUserStoreConfigRequest {
  UserStoreContextInitializer userStoreContextInitializer = 1;
}

message GetUserStoreConfigResponse {
  IKVStoreConfig globalConfig = 1;
}

message SuccessStatus {
}

// Used to construct UserStoreContext -
// used for schema/configuration/etc.
message UserStoreContextInitializer {
  AccountCredentials credentials = 1;
  string storeName = 2;
}

message AccountCredentials {
  string accountId = 1;
  string accountPasskey = 2;
}